Fix smaller screen content overflow

--- a/static/scss/welcome.scss
+++ b/static/scss/welcome.scss
@@ -11,7 +11,6 @@ $font-family_1: 'Poppins', sans-serif;
 .welcome {
 	position: relative;
 	width: 100%;
-	min-width: 100vh;
   min-height: 100vh;
 	padding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
 	display: flex;
